--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
- <Ɵtle>Mi primera página con esƟlo</Ɵtle>
- <link rel="stylesheet" href="miesƟlo.css">
+ <title>Mi primera página con estilo</title>
+ <link rel="stylesheet" href="miestilo.css">
 </head>
 <body>
 <!-- Menú de navegación del siƟo -->
 <ul class="navbar">
  <li><a href="Indice">Página principal</a>
  <li><a href="quesembrar.html">¿Que sembrar?</a>
- <li><a href="Ɵerra.html">La Ɵerra</a>
+ <li><a href="tierra.html">La tierra</a>
  <li><a href="Mantenimiento.html">Enlaces</a>
 </ul>
 <!-- Contenido principal -->
@@ -17,15 +17,15 @@
 <h1>Mi primera página con esƟlo</h1>
 <h1>¡Huerto Escolar!</h1></center>
 <p> Un huerto escolar es un terreno que puede tener disƟntas superficies, en el que los jóvenes de 
-una escuela culƟvan y recolectan hortalizas, verduras y plantas aromáƟcas. En algunos casos, si la 
-escuela no Ɵene un terreno específico para el huerto se pueden uƟlizar macetas o cajas.
+una escuela cultivan y recolectan hortalizas, verduras y plantas aromáticas. En algunos casos, si la 
+escuela no tiene un terreno específico para el huerto se pueden uƟlizar macetas o cajas.
 <br>
 <br>
 <p> Para crear huertos escolares se necesita:
 <ul>
  <li><p>Un terreno o recipientes en los que plantar.
  <li><p>Instrucciones sobre qué sembrar según la época del año.
- <li><p>Herramientas para sembrar y recolectar (palas, Ɵjeras, guantes, regaderas, 
+ <li><p>Herramientas para sembrar y recolectar (palas, tijeras, guantes, regaderas, 
 mangueras, rastrillos etc.)
  <li><p> Semillas de frutas, hortalizas y verduras.
  <li><p> Abono
